--- a/src/main.html
+++ b/src/main.html
@@ -5,7 +5,6 @@
 	<link rel="stylesheet" href="style.css">
 	<link href='http://fonts.googleapis.com/css?family=Roboto:400,700' rel='stylesheet' type='text/css'>
 	<script src="https://code.jquery.com/jquery-3.1.0.js"   integrity="sha256-slogkvB1K3VOkzAI8QITxV3VzpOnkeNVsKvtkYLMjfk="   crossorigin="anonymous"></script>
-	<script type="text/javascript" src="https://raw.githubusercontent.com/wilq32/jqueryrotate/master/jQueryRotate.js"></script>
 </head>
 <body>
 
@@ -15,9 +14,8 @@
  Your browser does not support the <code>audio</code> element.
 </audio>
 
+	<script type="text/javascript" src="jQueryRotate.js"></script>
 
-
-<script type="text/javascript" src="http://beneposto.pl/jqueryrotate/js/jQueryRotateCompressed.js"></script>
 
 
 
