--- a/src/main.html
+++ b/src/main.html
@@ -28,7 +28,7 @@
 </div>
 
 
-	<div id="container">
+	<div id=Main_container">
 		<h2>Let the pied piper play</h2>
 			<div id="quotebox">
 				<p>Motivation Generator</p>		
